# european-power-observatory

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: looker-studio-guide.md
dashboard/queries/: carbon_intensity_heatmap.sql  country_comparison.sql  fuel_breakdown.sql  overview_kpis.sql  renewable_ranking.sql  renewable_trends.sql  weather_correlation.sql
docs/: entsoe-psr-codes.md
infra/terraform/: bigquery.tf  gcs.tf  iam.tf  locals.tf  outputs.tf  providers.tf  secrets.tf  service_accounts.tf  terraform.tfvars.example  variables.tf
orchestration/config/: countries.json
orchestration/flows/: backfill_pipeline.yaml  daily_pipeline.yaml  dbt_mart.yaml  dbt_quality.yaml  entsoe_ingest.yaml  era5_ingest.yaml  gcp_kv_setup.yaml  gcp_setup.yaml  spark_transform.yaml
orchestration/scripts/tasks/: entsoe_fetch.py  era5_fetch.py
spark/: requirements.txt
spark/notebooks/: renewable_energy_local_spark.ipynb
spark/scripts/: entsoe_to_parquet.py  era5_to_parquet.py
spark/utils/: entsoe_xml_parser.py  era5_netcdf_helpers.py
transformations/: dbt_project.yml  profiles.yml
transformations/macros/: country_name.sql
transformations/models/mart/: fct_grid_carbon_intensity.sql  fct_renewable_kpi.sql  schema.yml
transformations/models/staging/: schema.yml  sources.yml  stg_entsoe__generation.sql  stg_era5__wind.sql  (+1 more)
transformations/seeds/: dim_country.csv  dim_energy_source.csv
transformations/tests/: assert_country_code_valid.sql  assert_minimum_row_coverage.sql  assert_mw_positive.sql  assert_timestamp_range.sql
(+2 files in other folders)
